Updated configuration for us-east-2

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,12 +1,19 @@
 version: '3.7'
 
 services:
-  localstack:
+  localstack_us_east_1:
     image: localstack/localstack
     ports:
       - "4566:4566"
     environment:
-      - SERVICES=s3,dynamodb,sqs,lambda,secretsmanager,apigateway,ec2,elb  # Adicione outros serviços conforme necessário
+      - SERVICES=s3,dynamodb,sqs,lambda,secretsmanager,apigateway,ec2,elb
       - DEFAULT_REGION=us-east-1
       - DOCKER_HOST=unix:///var/run/docker.sock
-  # Adicione outros serviços como PostgreSQL, MongoDB, etc. se precisar
+  localstack_us_east_2:
+    image: localstack/localstack
+    ports:
+      - "4567:4567"  # Porta diferente para cada região
+    environment:
+      - SERVICES=s3,dynamodb,sqs,lambda,secretsmanager,apigateway,ec2,elb
+      - DEFAULT_REGION=us-east-2
+      - DOCKER_HOST=unix:///var/run/docker.sock
